// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros accepts a simple options object: accepts a simple options object 1`] = `

import transformConfig from "../../macro";

export default transformConfig({
  modules: [
    {
      module: "the-module"
    }
  ]
}, {
  modulesPath: "../../custom-modules"
})

      ↓ ↓ ↓ ↓ ↓ ↓

export default {
  modules: [
    {
      module: "the-module",
      _component: require("react").lazy(() =>
        import(
          /* webpackChunkName: "the-module" */

          /* webpackPreload: true */
          "<PROJECT_ROOT>/packages/babel-plugin-transform-config/__tests__/custom-modules/the-module/index.js"
        )
      ),
      _path:
        "<PROJECT_ROOT>/packages/babel-plugin-transform-config/__tests__/custom-modules/the-module/index.js",
    },
  ],
};


`;

exports[`macros works: works 1`] = `

import transformConfig from "../../macro";

export default transformConfig({
  modules: [
    {
      module: "a-module",
      position: "top_left"
    }
  ]
})

      ↓ ↓ ↓ ↓ ↓ ↓

export default {
  modules: [
    {
      module: "a-module",
      _component: require("react").lazy(() =>
        import(
          /* webpackChunkName: "a-module" */

          /* webpackPreload: true */
          "<PROJECT_ROOT>/packages/babel-plugin-transform-config/__tests__/modules/a-module/a-module.js"
        )
      ),
      _path:
        "<PROJECT_ROOT>/packages/babel-plugin-transform-config/__tests__/modules/a-module/a-module.js",
      position: "top_left",
    },
  ],
};


`;
